fix(staff): fix css name overlap

--- a/staff/src/styles/login.css
+++ b/staff/src/styles/login.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Merriweather', serif;
 }
 
-.wrapper {
+.login__wrapper {
   position: relative;
   position: fixed;
   top: 0;
